Add more DL project posts + heros + maxWidth for hero

--- a/src/content/ideas/2025/dl-a1/index.mdx
+++ b/src/content/ideas/2025/dl-a1/index.mdx
@@ -12,8 +12,12 @@ audience: 'All'
 media_subpath: "/ideas/dl-a1/"
 parent: '2025/dl-retro'
 image:
-  path: "../dl-retro/hero-green-ripples.png"
+  # path: "hero-clipart-blume-vintage-kunst-1631264278ngu.png"
+  # path: "hero-backprop.png"
+  path: "hero-backprop4.png"
   alt: 'Green ripples abstract art'
+  # maxWidth: "800px"
+hideCaption: true
 ---
 
 ## TL;DR
