--- a/src/content/ideas/2025/dl-a2/index.mdx
+++ b/src/content/ideas/2025/dl-a2/index.mdx
@@ -12,8 +12,12 @@ audience: 'All'
 media_subpath: "/ideas/dl-a2/"
 parent: '2025/dl-retro'
 image:
-  path: "../dl-retro/hero-geologic-layers.png"
+  # path: "hero-flower-2.png"
+  # path: "hero-cnn2.png"
+  path: "hero-cnn4.png"
   alt: 'Layered mineral photograph'
+  # maxWidth: "600px"
+hideCaption: true
 ---
 
 ## TL;DR
