--- a/src/content/ideas/2025/dl-a3/index.mdx
+++ b/src/content/ideas/2025/dl-a3/index.mdx
@@ -12,8 +12,12 @@ audience: 'All'
 media_subpath: "/ideas/dl-a3/"
 parent: '2025/dl-retro'
 image:
-  path: "../dl-retro/hero-green-ripples.png"
+  # path: "hero-blumen-gemalt-kunst-clipart-1607870520LoY.png"
+  # path: "hero-sequence.png"
+  path: "hero-sequence2.png"
   alt: 'Green ripples abstract art'
+  # maxWidth: "600px"
+hideCaption: true
 ---
 
 ## TL;DR
