--- a/src/content/ideas/2025/dl-a4/index.mdx
+++ b/src/content/ideas/2025/dl-a4/index.mdx
@@ -9,11 +9,15 @@ tags: ['deep-learning', 'pyTorch', 'generative-models', 'MSCS']
 category: ['projects']
 draft: true
 audience: 'All'
-media_subpath: "/ideas/dl-a4/"
+media_subpath: "/ideas/dl-a3/"
 parent: '2025/dl-retro'
 image:
-  path: "../dl-retro/hero-geologic-layers.png"
+  # path: "hero-blume-blute-vintage-kunst-1598099664dKm.png"
+  # path: "hero-vae1.png"
+  path: "hero-vae3.png"
   alt: 'Layered mineral photograph'
+  # maxWidth: "600px"
+hideCaption: true
 ---
 
 ## TL;DR
