--- a/src/content/ideas/2025/dl-final-project/index.mdx
+++ b/src/content/ideas/2025/dl-final-project/index.mdx
@@ -12,8 +12,12 @@ audience: 'All'
 media_subpath: "/ideas/dl-final-project/"
 parent: '2025/dl-retro'
 image:
-  path: "../dl-retro/hero-green-ripples.png"
+  # path: "hero-vintage-blumen-kunst-clipart.png"
+  # path: "hero-crosscoder.png"
+  path: "hero-crosscoder2.png"
   alt: 'Green ripples abstract art'
+  # maxWidth: "600px"
+hideCaption: true
 ---
 
 ## TL;DR
