Add in icons for post types

--- a/src/content/ideas/2025/parallelism-concurrency/index.mdx
+++ b/src/content/ideas/2025/parallelism-concurrency/index.mdx
@@ -4,7 +4,7 @@ description: 'A dive into concurrency and parallelism across different levels of
 date: '2025-07-29'
 updated: '2025-10-24'
 status: 'complete'
-type: 'idea'
+type: 'article'
 tags: ['operating-systems', 'multithreading', 'distributed-systems', 'go', 'c++']
 category: ['ideas']
 draft: false
