--- a/src/content/ideas/2025/uv/index.mdx
+++ b/src/content/ideas/2025/uv/index.mdx
@@ -3,7 +3,7 @@ title: 'Using uv: A Modern Python Workflow'
 description: 'An introduction to uv, a fast, Rust-based tool for Python packaging'
 date: '2025-10-17'
 status: 'in-progress'
-type: 'idea'
+type: 'article'
 tags: ['python', 'tips', 'short']
 category: ['ideas']
 draft: false
