--- a/src/content/ideas/2022/python-bitwise-set-and-dicts/index.mdx
+++ b/src/content/ideas/2022/python-bitwise-set-and-dicts/index.mdx
@@ -4,6 +4,8 @@ description: 'Bitwise or getting a bit wise? Quick post on quirky Python syntax 
 date: '2022-10-27'
 tags: ['python', 'short']
 category: ['budding']
+status: 'complete'
+type: 'article'
 draft: false
 audience: 'Developers'
 media_subpath: '/ideas/python-bitwise-set-and-dicts/'
